--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "cookies-next": "^4.1.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-loader-spinner": "^6.1.6",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
